<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".detail.DetailActivity">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="@dimen/padding_layout"
            android:elevation="1dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/padding_layout"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="@dimen/padding_layout"
            android:contentDescription="@string/share_button"
            android:elevation="1dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/padding_layout"
            android:src="@drawable/ic_share"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/backdrop_poster"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:contentDescription="@string/image_poster"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/ItborneoText.AppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/padding_layout"
            android:paddingTop="@dimen/padding_layout"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_poster"
            tools:text="@tools:sample/lorem" />

        <HorizontalScrollView
            android:id="@+id/scroll_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TextView
                android:id="@+id/tv_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="@dimen/padding_layout"
                android:paddingTop="@dimen/padding_layout"

                tools:text="@tools:sample/lorem" />
        </HorizontalScrollView>


        <TextView
            android:id="@+id/tv_vote_average"
            style="@style/ItborneoText.Title"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/padding_layout"
            android:background="@drawable/background_circle"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll_genre"
            tools:text="8.8" />

        <TextView
            android:id="@+id/tv_label_storyline"
            style="@style/ItborneoText.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_layout"
            android:paddingTop="@dimen/padding_layout"
            android:text="@string/storyline"
            app:layout_constraintTop_toBottomOf="@id/tv_vote_average" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_layout"
            android:paddingTop="@dimen/padding_layout_half"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_storyline"
            tools:lines="3"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/tv_label_cast"
            style="@style/ItborneoText.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_overview"
            android:paddingHorizontal="@dimen/padding_layout"
            android:paddingTop="@dimen/padding_layout"
            android:text="@string/storyline"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_casts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_layout"
            android:paddingTop="@dimen/padding_layout"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_cast"
            tools:listitem="@layout/item_cast"
            tools:text="@tools:sample/lorem" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
