<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:keep="@menu/menu_main">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies" />
    <item
        android:id="@+id/seriesFragment"
        android:icon="@drawable/ic_series"
        android:title="@string/series" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
</menu>