<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.views.DetailMovieActivity"
    tools:keep="@layout/activity_detail_movies">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_margin="@dimen/padding_layout"
                android:contentDescription="@string/back_button"
                android:elevation="1dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/padding_layout"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnFavorite"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favorite"
                android:elevation="1dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_favorite_inactive"
                app:layout_constraintBottom_toBottomOf="@+id/iv_detail_movie_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_detail_movie_poster" />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_margin="@dimen/padding_layout"
                android:contentDescription="@string/share_button"
                android:elevation="1dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/padding_layout"
                android:src="@drawable/ic_share"
                android:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/iv_detail_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:contentDescription="@string/image_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />


            <TextView
                android:id="@+id/tv_detail_movie_title"
                style="@style/ItborneoText.AppTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/padding_layout"
                android:paddingTop="@dimen/padding_layout"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_movie_poster"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_detail_movie_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_layout"
                android:layout_marginTop="@dimen/padding_layout"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_title"
                tools:text="@tools:sample/lorem" />


            <TextView
                android:id="@+id/tv_detail_movie_vote_average"
                style="@style/ItborneoText.Title"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/padding_layout"
                android:background="@drawable/background_circle"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_genres"
                tools:text="8.8" />

            <TextView
                android:id="@+id/tv_detail_movie_label_storyline"
                style="@style/ItborneoText.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_layout"
                android:layout_marginTop="@dimen/padding_layout"
                android:text="@string/storyline"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_vote_average" />

            <TextView
                android:id="@+id/tv_detail_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_layout"
                android:layout_marginTop="@dimen/padding_layout_half"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_label_storyline"
                tools:lines="3"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/tv_label_cast"
                style="@style/ItborneoText.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_layout"
                android:layout_marginTop="@dimen/padding_layout"
                android:text="@string/casts"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail_movie_casts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_layout"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_cast"
                tools:listitem="@layout/item_cast"
                tools:text="@tools:sample/lorem" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/inc_error"
        layout="@layout/partial_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <include
        android:id="@+id/inc_loading"
        layout="@layout/partial_loading_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</FrameLayout>